--- a/mequeue/Cargo.toml
+++ b/mequeue/Cargo.toml
@@ -10,5 +10,8 @@ version = "0.0.0"
 license = "Apache-2.0"
 edition = "2021"
 
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
+
 [dependencies]
 async-trait = "0.1"
