Move stepwise into separate crate

--- a/interceptor/Cargo.toml
+++ b/interceptor/Cargo.toml
@@ -8,7 +8,7 @@ name = "interceptor"
 path = "main.rs"
 
 [dependencies]
-mequeue = { version = "0", path = "../mequeue" }
+stepwise = { version = "0", path = "../stepwise" }
 
 ethers-providers = { version = "2", features = [
     "ws",
