--- a/interceptor/Cargo.toml
+++ b/interceptor/Cargo.toml
@@ -8,13 +8,14 @@ name = "interceptor"
 path = "main.rs"
 
 [dependencies]
-stepwise = { version = "0", path = "../stepwise" }
+mequeue = { version = "0", path = "../mequeue" }
 
 ethers-providers = { version = "2", features = [
     "ws",
 ], default-features = false }
 
 ethers-core = { version = "2", default-features = false }
+async-channel = "1"
 
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
