--- a/mequeue/Cargo.toml
+++ b/mequeue/Cargo.toml
@@ -11,6 +11,6 @@ license = "Apache-2.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["sync"] }
 async-channel = "1"
 async-trait = "0.1"
