--- a/mequeue/Cargo.toml
+++ b/mequeue/Cargo.toml
@@ -11,6 +11,8 @@ license = "Apache-2.0"
 edition = "2021"
 
 [dependencies]
+parking_lot = "0.12.1"
+async-trait = "0.1"
+
 tokio = { version = "1", features = ["sync"] }
 async-channel = "1"
-async-trait = "0.1"
